# wamr

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
include/: config.h  mqtt_client.h  storage_manager.h  wamr_wrapper.h
src/: main.c  main.cpp  mqtt_client.cpp  storage_manager.cpp  wasm_runtime_manager.cpp
test_device2/: Makefile  README.md  pub.c  publish_wasm_bytes.c  test1
